--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body>
+  <body class="scroll_style">
 
     <div class="file_list">
       <ul id="file_list"></ul>
@@ -107,7 +107,7 @@
           </div>
 
           <div class="preview_image" id="preview_image_div">
-            <img id="preview_image" width="300px" src="/download?path=0&dir=&file=3.png" />
+            <img id="preview_image" class="" width="300px" src="/download?path=0&dir=&file=3.png" />
           </div>
         </div>
 
