--- a/app/static/css/editor.1.css
+++ b/app/static/css/editor.1.css
@@ -1,3 +1,11 @@
+:root {
+  --lines-area-color: #24282B;
+}
+
+[data-theme = "light"] {
+  --lines-area-color: #EBEEF1;
+}
+
 .code_area {
   position: absolute;
   top: 26px;
@@ -33,8 +41,8 @@
   color: #B1B1B2;
   padding: 0px 5px;
 
-  background-color: #24282B;
-  border-color: #24282B;
+  background-color: var(--lines-area-color);
+  border-color: var(--lines-area-color);
   resize: none;
 
   cursor: default;
@@ -54,6 +62,10 @@
   height: 25px;
 
   border-bottom: 1px solid var(--top-border-color);
+}
+
+.topBar p {
+  color: var(--top-font-color);
 }
 
 .topBar_button {
