--- a/app/static/css/topBar.1.css
+++ b/app/static/css/topBar.1.css
@@ -25,10 +25,13 @@
 }
 
 .path_input {
-  left: 220px;
+  position: absolute;
+  left: 510px;
+  right: 5px;
   /*680px*/
-  width: calc(900px + var(--scalex));
-  top: -2px;
+  /*width: calc(900px + var(--scalex));*/
+
+  top: 0px;
 
   background-color: var(--top-input-color);
 
