--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href = "static/css/topBar.1.css"/>
     <link rel="stylesheet" href = "static/css/leftBar.1.css"/>
     <link rel="stylesheet" href = "static/css/rightBar.1.css"/>
+    <link rel="stylesheet" href = "static/css/path_select.1.css"/>
 
     <link rel="stylesheet" href = "static/css/file.1.css"/>
 
@@ -228,12 +229,24 @@
       </div>
     </div>
 
+    <div id="path_select_list_div" class="path_select_list_div" style="display: none">
+      <ul id="path_list" style="position: absolute; top: -14px;"></ul>
+    </div>
+
     <!--кнопка для открытия настроек-->
     <div id="user_button" class="user_button block_select button_margin" onclick="open_close_user_button()">
       <img class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
       <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
       <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
       <img id="user_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
+    </div>
+
+    <!--кнопка для выбора диска-->
+    <div id="path_select_button" class="path_select_button block_select button_margin" onclick="open_close_path_button()">
+      <img class="icon_topBar" style="margin: 10px 15px" width="25" height="25" src="static/img/dvd-disk.svg">
+      <p class="top_bar_font_color" id="path_status_size" style="position: absolute; margin: -42px 45px; color: #959DA5">1Gb</p>
+      <p class="top_bar_font_color" id="path_name" style="position: absolute; margin: -28px 45px">home</p>
+      <img id="path_select_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
   </body>
