--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -146,16 +146,16 @@
 
 
         <!--кнопка для копирования выбранных файлов-->
-        <!--<div id="file_list_copy_button" class="file_list_copy_button block_select button_margin" onclick="()">
+        <div id="file_list_copy_button" class="file_list_copy_button block_select button_margin" onclick="()">
           <img class="icon" width="20" height="20" src="static/img/copy.svg">
           <p>copy</p>
-        </div>-->
+        </div>
 
         <!--кнопка для копирования выбранных файлов-->
-        <!--<div id="file_list_cut_button" class="file_list_cut_button block_select button_margin" onclick="()">
+        <div id="file_list_cut_button" class="file_list_cut_button block_select button_margin" onclick="()">
           <img class="icon" width="20" height="20" src="static/img/cut.svg">
           <p>cut</p>
-        </div>-->
+        </div>
 
       </div>
 
