Диалоговое окно для создания файла. Флаги для типа отображения списка файлов

--- a/app/static/css/file.1.css
+++ b/app/static/css/file.1.css
@@ -3,8 +3,9 @@
   position: absolute;
   left: var(--width-left-bar);
   top: 30px;
+  right: 0px;
 
-  width: calc(1080px + var(--scalex));
+  /*width: calc(1080px + var(--scalex));*/
 }
 
 .file {
