--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -14,19 +14,41 @@
     <link rel="stylesheet" href = "static/css/file.1.css"/>
 
     <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
+    <link rel="stylesheet" href = "static/css/dialog.1.css"/>
 
   </head>
 
   <body class="scroll_style">
 
-    <div class="file_list">
+    <div id="file_list_div" class="file_list">
       <ul id="file_list"></ul>
     </div>
 
     <div class="leftBar">
-      <!--миникарта (не используется)-->
-      <div class="path_map_div" style="display: none">
-        <ul id="path_map_list"></ul>
+
+      <!---->
+      <div style="position: absolute; left: 10px; top: 55px">
+        <input type="checkbox" class="custom-checkbox" id="checkbox_draw_type_list" name="checkbox_draw_type_list" value="yes" onchange="()">
+        <label for="checkbox_draw_type_list">
+          <img class="icon" width="30" height="30" src="static/img/file list.svg">
+        </label>
+      </div>
+
+      <div style="position: absolute; left: 80px; top: 55px">
+        <input type="checkbox" class="custom-checkbox" id="checkbox_draw_type_table" name="checkbox_draw_type_table" value="yes" onchange="load_preview_image()">
+        <label for="checkbox_draw_type_table">
+          <img class="icon" width="30" height="30" src="static/img/file table.svg">
+        </label>
+      </div>
+
+      <div class="small_button_style block_select button_margin" style="top: 95px; width: 200px;" onclick="create_file()">
+        <img class="icon" width="20" height="20" src="static/img/new folder.svg">
+        <p>create folder</p>
+      </div>
+
+      <div class="small_button_style block_select button_margin" style="top: 131px; width: 200px;" onclick="create_file()">
+        <img class="icon" width="20" height="20" src="static/img/files/file.svg">
+        <p>create file</p>
       </div>
 
       <!--информация о диске-->
@@ -210,17 +232,26 @@
     </div>
 
     <!--затемнённый фон (для настроек)-->
-    <div id="background_black" class="background_black" style="display: none"></div>
+    <div id="background_black" class="background_black" style="display: none" onclick="close_user()"></div>
 
     <div id="leftBar_user" class="leftBar_user" style="display: none">
-      <!--<div class="small_button_style block_select button_margin" style="left: 0px; top: 45px; width: 200px">
-        <img class="icon_topBar" width="20" height="20" src="static/img/settings.svg">
-        <p class="top_bar_font_color">settings</p>
-      </div>-->
-      <div style="position: absolute; top: 45px; left: 10px;">
+
+      <p class="top_bar_font_color" style="position: absolute; left: 8px; top: 32px;">Theme</p>
+
+      <div style="position: absolute; top: 55px; left: 15px;">
         <input type="checkbox" class="custom-checkbox top_checkBox" id="lightThame_chekcbox" name="lightThame_chekcbox" value="yes" onchange="checkBox_thame(this)">
         <label for="lightThame_chekcbox"><p class="top_bar_font_color">Light theme</p></label>
       </div>
+
+      <!--<div style="position: absolute; top: 85px; left: 15px;">
+        <input type="checkbox" class="custom-checkbox top_checkBox" id="darkThame_chekcbox" name="darkThame_chekcbox" value="yes" onchange="(this)">
+        <label for="darkThame_chekcbox"><p class="top_bar_font_color">Dark theme</p></label>
+      </div>
+
+      <div style="position: absolute; top: 115px; left: 15px;">
+        <input type="checkbox" class="custom-checkbox top_checkBox" id="systemThame_chekcbox" name="systemThame_chekcbox" value="yes" onchange="(this)">
+        <label for="systemThame_chekcbox"><p class="top_bar_font_color">System theme</p></label>
+      </div>-->
 
       <!--кнопка для выхода из аккаунта-->
       <div class="button_exit_style block_select button_margin" onclick="logout()">
@@ -249,6 +280,27 @@
       <img id="path_select_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
+    <div id="dialog_bg" class="dialog_backgound"></div>
+
+    <!--диалоговые окна-->
+    <div id="dialog_create_file" class="dialog_create_file">
+      <div class="dialog_top_name">
+        <div class="dialog_close_button block_select button_margin" onclick="close_create_file()">
+          <img class="icon" width="20" height="20" src="static/img/cross.svg">
+          <p>close</p>
+        </div>
+      </div>
+
+      <div class="dialog_info">
+        <img class="icon" style="position: absolute; left: 10px; top: 10px;" width="40" height="40" src="static/img/files/file.svg">
+        <input id="create_fileName_input" class="input_style create_fileName_input" style="" type=text placeholder="file name" onkeypress="return gg(event)">
+      </div>
+
+      <div class="dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;">
+        <p style="margin: 5px 28px">create</p>
+      </div>
+    </div>
+
   </body>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
@@ -257,7 +309,6 @@
 
   <script type="text/javascript" src="static/js/info.1.js"></script>
   <script type="text/javascript" src="static/js/user.1.js"></script>
-  <script type="text/javascript" src="static/js/path_map.1.js"></script>
   <script type="text/javascript" src="static/js/upload_file.1.js"></script>
   <script type="text/javascript" src="static/js/file.1.js"></script>
 
