доделал диалоговое окно для удаления файлов

--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -129,6 +129,7 @@ body {
 .scroll_style::-webkit-scrollbar-thumb {
   /* цвет ползунка */
   background-color: var(--scroll-color);
+  border-radius: 2px;
 }
 
 .hr_style{
