--- a/app/static/css/dialog.1.css
+++ b/app/static/css/dialog.1.css
@@ -94,3 +94,19 @@
 .dialog_button:hover {
   background-color: var(--hover-color);
 }
+
+.red_dialog_button {
+  position: absolute;
+
+  height: 35px;
+
+  border-radius: 4px;
+  border: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+
+  cursor: pointer;
+}
+
+.red_dialog_button:hover {
+  background-color: var(--main-red-color);
+}
